kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-base-devops-deployment
  labels:
    app: backend-base-devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-base-devops
  template:
    metadata:
      labels:
        app: backend-base-devops
    spec:
      containers:
          - name: backend-base-devops
            image: localhost:8082/backend-base-devops:latest
            imagePullPolicy: Always
            ports:
            - containerPort: 3001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: backend-base-devops-svc
  namespace: devops
  labels:
    app: backend-base-devops
spec:
  selector:
    app: backend-base-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  
---
apiVersion: v1
kind: Service
metadata:
  name: backend-base-svc
  namespace: devops
  labels:
    app: backend-base
spec:
  selector:
    app: backend-base
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-base-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend-path(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-base-svc
            port:
              number: 80
